[package]
name = "thinbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[feature]
unsized_locals = []

[dependencies]
docfg = "0.1.0"
futures = { version = "0.3.25", optional = true }
serde = { version = "1.0.152", optional = true }
