[package]
name = "thinnbox"
description = "An expansion of the currently nightly ThinBox of the standard library"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aandreba/thinbox"
category = ["data-structures", "memory-management", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
unsized_locals = []

[dependencies]
docfg = "0.1.0"
futures = { version = "0.3.26", optional = true }
serde = { version = "1.0.152", optional = true }
